--- a/NoSQL/ce-sec/Dockerfile
+++ b/NoSQL/ce-sec/Dockerfile
@@ -18,8 +18,9 @@ ENV KV_HARANGE 5010-5020
 ENV KV_SERVICERANGE 5021-5049
 
 # specific to secure configuration
-RUN microdnf install openssl
+RUN microdnf -y install openssl-1.1.1k && microdnf clean all
 
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 RUN curl -OLs $DOWNLOAD_LINK  && \
     jar tf $DOWNLOAD_FILE | grep "kv-$KV_VERSION/lib" > extract.libs && \
     jar xf $DOWNLOAD_FILE @extract.libs && \
@@ -30,8 +31,8 @@ WORKDIR "/kv-$KV_VERSION"
 COPY start-kvlite.sh .
 RUN chmod +x start-kvlite.sh
 COPY sec/* sec/
-RUN ls sec/*
-RUN chmod +x sec/setup-http-proxy-sec.sh
+RUN ls sec/*   && \
+    chmod +x sec/setup-http-proxy-sec.sh
 
 VOLUME ["/kvroot"]
 
