--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -1,5 +1,5 @@
 ---
-name: Lint new or modified Markdown files
+name: Lint new or modified files using Super Linter
 
 on:
   push:
@@ -8,20 +8,21 @@ on:
     branches: [main]
 
 jobs:
-  lint-markdown-files:
-    name: Lint Markdown files
+  lint-new-modified-files:
+    name: Lint new or modified files
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout Git repository with history
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
-      - name: Run markdownlint
+      - name: Set environment variables
+        run: cat .github/super-linter.env >> "$GITHUB_ENV"
+
+      - name: Run Super Linter
         uses: github/super-linter/slim@v4
         env:
-          VALIDATE_ALL_CODEBASE: false
-          VALIDATE_MARKDOWN: true
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
