--- a/OracleJava/19/Dockerfile
+++ b/OracleJava/19/Dockerfile
@@ -25,7 +25,7 @@
 
 FROM oraclelinux:8 as builder
 
-MAINTAINER Aurelio Garcia-Ribeyro <aurelio.garciaribeyro@oracle.com>
+LABEL maintainer="Aurelio Garcia-Ribeyro <aurelio.garciaribeyro@oracle.com>"
 
 # Since the files are compressed as tar.gz first dnf install tar. gzip is already in oraclelinux:8
 RUN set -eux; \
@@ -41,16 +41,17 @@ ENV JAVA_URL=https://download.oracle.com/java/19/latest \
 	JAVA_HOME=/usr/java/jdk-19
 
 ##
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 RUN set -eux; \
-	ARCH=$(uname -m) && \
+	ARCH="$(uname -m)" && \
 	# Java uses just x64 in the name of the tarball
-    if [ "$ARCH" == "x86_64" ]; \
+    if [ "$ARCH" = "x86_64" ]; \
         then ARCH="x64"; \
     fi && \
-    JAVA_PKG="$JAVA_URL/jdk-19_linux-${ARCH}_bin.tar.gz" ; \
+    JAVA_PKG="$JAVA_URL"/jdk-19_linux-"${ARCH}"_bin.tar.gz ; \
 	JAVA_SHA256=$(curl "$JAVA_PKG".sha256) ; \ 
 	curl --output /tmp/jdk.tgz "$JAVA_PKG" && \
-	echo "$JAVA_SHA256 */tmp/jdk.tgz" | sha256sum -c; \
+	echo "$JAVA_SHA256" */tmp/jdk.tgz | sha256sum -c; \
 	mkdir -p "$JAVA_HOME"; \
 	tar --extract --file /tmp/jdk.tgz --directory "$JAVA_HOME" --strip-components 1
 	
