--- a/OracleOpenJDK/19/Dockerfile
+++ b/OracleOpenJDK/19/Dockerfile
@@ -23,12 +23,13 @@
 
 FROM oraclelinux:8 
 
-MAINTAINER Aurelio Garcia-Ribeyro <aurelio.garciaribeyro@oracle.com>
+LABEL maintainer="Aurelio Garcia-Ribeyro <aurelio.garciaribeyro@oracle.com>"
 
 
-ENV JAVA_URL=https://download.java.net/java/GA/jdk19.0.1/afdd2e245b014143b62ccb916125e3ce/10/GPL \
+ENV JAVA_URL=https://download.java.net/java/GA/jdk19.0.2/fdb695a9d9064ad6b064dc6df578380c/7/GPL \
 	JAVA_HOME=/usr/java/jdk-19 \
 	LANG=en_US.UTF-8
+	
 
 # If you need the Java Version you can read it from the release file with 
 #JAVA_VERSION=$(sed -n '/^JAVA_VERSION="/{s///;s/"//;p;}' "$JAVA_HOME"/release);
@@ -36,6 +37,7 @@ ENV JAVA_URL=https://download.java.net/java/GA/jdk19.0.1/afdd2e245b014143b62ccb9
 ENV	PATH $JAVA_HOME/bin:$PATH
 	
 # Since the files are compressed as tar.gz first dnf install tar. gzip is already in oraclelinux:8
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 RUN set -eux; \
 	dnf -y update; \
 	dnf install -y \
@@ -44,22 +46,22 @@ RUN set -eux; \
 		freetype fontconfig \
 	; \
 	rm -rf /var/cache/dnf; \
-	ARCH=$(uname -m) && \
+	ARCH="$(uname -m)" && \
 	# Java uses just x64 in the name of the tarball
-    if [ "$ARCH" == "x86_64" ]; \
+    if [ "$ARCH" = "x86_64" ]; \
         then ARCH="x64"; \
     fi && \
-    JAVA_PKG="$JAVA_URL/openjdk-19.0.1_linux-${ARCH}_bin.tar.gz" ; \
-	JAVA_SHA256=$(curl "$JAVA_PKG".sha256) ; \ 
+    JAVA_PKG="$JAVA_URL"/openjdk-19.0.2_linux-"${ARCH}"_bin.tar.gz ; \
+	JAVA_SHA256="$(curl "$JAVA_PKG".sha256)" ; \ 
 	curl --output /tmp/jdk.tgz "$JAVA_PKG" && \
-	echo "$JAVA_SHA256 */tmp/jdk.tgz" | sha256sum -c -; \
+	echo "$JAVA_SHA256" */tmp/jdk.tgz | sha256sum -c -; \
 	mkdir -p "$JAVA_HOME"; \
 	tar --extract --file /tmp/jdk.tgz --directory "$JAVA_HOME" --strip-components 1; \
 	rm /tmp/jdk.tgz
 
 RUN ln -sfT "$JAVA_HOME" /usr/java/default; \
 	ln -sfT "$JAVA_HOME" /usr/java/latest; \
-	for bin in "$JAVA_HOME/bin/"*; do \
+	for bin in "$JAVA_HOME"/bin/*; do \
 		base="$(basename "$bin")"; \
 		[ ! -e "/usr/bin/$base" ]; \
 		alternatives --install "/usr/bin/$base" "$base" "$bin" 20000; \
