--- a/OracleCloudInfrastructure/oci-cli/Dockerfile
+++ b/OracleCloudInfrastructure/oci-cli/Dockerfile
@@ -1,4 +1,4 @@
-# Copyright (c) 2022 Oracle and/or its affiliates.
+# Copyright (c) 2022, 2023 Oracle and/or its affiliates.
 # Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.
 
 FROM ghcr.io/oracle/oraclelinux8-python:3.9
@@ -11,7 +11,8 @@ ENV IMAGE_BUILDTIME=${BUILDTIME} \
     IMAGE_VERSION=${VERSION} \
     IMAGE_REVISION=${REVISION}
 
-RUN python3 -m pip install --upgrade pip \
+RUN dnf -y install jq && rm -rf /var/cache/dnf/* \
+    && python3 -m pip install --upgrade pip \
     && python3 -m pip install oci-cli \
     && cp /usr/local/lib/python3.9/site-packages/oci_cli/bin/oci_autocomplete.sh /usr/local/bin/oci_autocomplete.sh \
     && chmod +x /usr/local/bin/oci_autocomplete.sh \
