updated files to use the April 2023 cpu, added JDK 8 besides serverJRE 8
Signed-off-by: Aurelio Garcia-Ribeyro <aurelio.garciaribeyro@oracle.com>

--- a/OracleJava/17/Dockerfile
+++ b/OracleJava/17/Dockerfile
@@ -4,7 +4,7 @@
 #
 # ORACLE DOCKERFILES PROJECT
 # --------------------------
-# This is the Dockerfile for Oracle JDK 17
+# This is the Dockerfile for Oracle JDK 17 on Oracle Linux 8
 #
 # REQUIRED FILES TO BUILD THIS IMAGE
 # ----------------------------------
