simplified yum install command as suggested
Signed-off-by: Aurelio Garcia-Ribeyro <aurelio.garciaribeyro@oracle.com>

--- a/OracleJava/11/Dockerfile.8
+++ b/OracleJava/11/Dockerfile.8
@@ -27,8 +27,7 @@ FROM oraclelinux:8 as builder
 
 LABEL maintainer="Aurelio Garcia-Ribeyro <aurelio.garciaribeyro@oracle.com>"
 
-RUN set -eux; \
-	dnf install -y tar;
+RUN dnf install -y tar
 
 # Default to UTF-8 file.encoding
 ENV LANG en_US.UTF-8
