--- a/OracleJava/11/Dockerfile
+++ b/OracleJava/11/Dockerfile
@@ -27,10 +27,8 @@ FROM oraclelinux:7-slim as builder
 
 LABEL maintainer="Aurelio Garcia-Ribeyro <aurelio.garciaribeyro@oracle.com>"
 
-RUN set -eux; \
-	yum install -y \
-		gzip \
-		tar;
+RUN yum install -y gzip tar
+		
 	
 # Default to UTF-8 file.encoding
 ENV LANG en_US.UTF-8
