--- a/OracleJava/8/jdk/Dockerfile.8
+++ b/OracleJava/8/jdk/Dockerfile.8
@@ -27,7 +27,7 @@ FROM oraclelinux:8 as builder
 
 LABEL maintainer="Aurelio Garcia-Ribeyro <aurelio.garciaribeyro@oracle.com>"
 
-# Since the files is compressed as tar.gz first yum install tar. gzip is already in ghcr.io/oracle/oraclelinux8-compat:8-slim
+# Since the files is compressed as tar.gz first yum install tar. gzip is already in oraclelinux:8
 RUN dnf install -y tar
 
 # Default to UTF-8 file.encoding
