Management Agent container to support runAsUser and --read-only flag (#2615)

--- a/OracleManagementAgent/dockerfiles/1.0.0/Dockerfile
+++ b/OracleManagementAgent/dockerfiles/1.0.0/Dockerfile
@@ -6,7 +6,7 @@
 # --------------------------
 # This is the Dockerfile for Oracle Management Agent
 #
-# Base image of this dockerfile is Oracle Linux 8 Slim image.
+# Base image of this dockerfile is Oracle Linux 7 Slim docker image.
 # 
 # REQUIRED FILES TO BUILD THIS IMAGE
 # ----------------------------------
@@ -25,7 +25,7 @@
 #		$ bash build.sh
 #
 
-FROM container-registry.oracle.com/os/oraclelinux:8-slim
+FROM oraclelinux:7-slim
 
 # Labels
 LABEL "provider"="Oracle"                                               \
@@ -33,8 +33,9 @@ LABEL "provider"="Oracle"                                               \
       "volume.data"="/opt/oracle"
 
 # Install packages to install and run Management Agent
-RUN microdnf -y install \
-    java-1.8.0-openjdk \
+RUN set -eux; \
+    yum -y install \
+    java-1.8.0-openjdk-devel.x86_64 \
     sudo \
     unzip \
     && rm -rf /var/cache/yum
@@ -44,16 +45,15 @@ ENV LANG en_US.UTF-8
 ENV LC_ALL C
 
 # Copy container scripts to initialize the environment and start Management Agent
-COPY ./container-scripts/*.sh /opt/oracle-mgmtagent-staging/scripts/
+COPY ./container-scripts/*.sh /opt/oracle-mgmtagent-bootstrap/scripts/
+RUN chmod 0544 /opt/oracle-mgmtagent-bootstrap/scripts/*.sh
 
 # Copy user provided scripts
-COPY ./user-scripts/init-agent.sh /opt/oracle-mgmtagent-staging/scripts/
+COPY ./user-scripts/init-agent.sh /opt/oracle-mgmtagent-bootstrap/scripts/
+RUN chmod 0544 /opt/oracle-mgmtagent-bootstrap/scripts/init-agent.sh
 
 # Copy Management Agent Installer Zip bundle
-COPY ./oracle.mgmt_agent.zip /opt/oracle-mgmtagent-staging/packages/
-
-# Set permissions
-RUN chmod -R 0755 /opt/oracle-mgmtagent-staging/
+COPY ./oracle.mgmt_agent.zip /opt/oracle-mgmtagent-bootstrap/packages/
 
 # Set watchdog as the entrypoint script (PID-1) for the container
-ENTRYPOINT ["/opt/oracle-mgmtagent-staging/scripts/initialize.sh"]
+ENTRYPOINT ["/opt/oracle-mgmtagent-bootstrap/scripts/watchdog.sh"]
