--- a/OracleManagementAgent/dockerfiles/1.0.0/docker-compose.yml
+++ b/OracleManagementAgent/dockerfiles/1.0.0/docker-compose.yml
@@ -23,17 +23,18 @@ services:
   mgmtagent:
     build: .
 
-    # Image name reported by container images listing
+    # Image name reported by docker images listing
     image: oracle/mgmtagent-container
+
+    environment:
+      RUN_AGENT_AS_USER: ${RUN_AGENT_AS_USER:-mgmt_agent}
 
     # Internal hostname identifier for the container
     hostname: ${mgmtagent_hostname}
 
-    user: ${USERID}:${GROUPID}
-
     # Named volume to persist state
     volumes:
-      - ${DOCKER_BASE_DIR}:/opt/oracle:rw
+      - mgmtagent-volume:/opt/oracle:rw
 
     # Restart the container on crash unless if it was stoppped
     restart: unless-stopped
@@ -51,3 +52,11 @@ services:
 secrets:
     installkey_input_rsp:
       file: ./input.rsp
+
+#
+# [ volumes definition ]
+#
+# Create named Docker volume to persist Management Agent state
+#
+volumes:
+  mgmtagent-volume:
