add EXPOSE directives and removed nodocs option

--- a/OracleLinuxDevelopers/oraclelinux8/haproxy/Dockerfile
+++ b/OracleLinuxDevelopers/oraclelinux8/haproxy/Dockerfile
@@ -4,7 +4,9 @@
 FROM ghcr.io/oracle/oraclelinux:8
 
 RUN \
-    dnf -y install --setopt=tsflags=nodocs haproxy && \
+    dnf -y install haproxy && \
     rm -rf /var/cache/dnf
+
+EXPOSE 5000
 
 CMD ["/usr/sbin/haproxy", "-p", "/run/haproxy.pid", "-f", "/etc/haproxy/haproxy.cfg", "-W", "-db"]
