--- a/OracleDatabase/RAC/OracleRealApplicationClusters/dockerfiles/19.3.0/Dockerfile
+++ b/OracleDatabase/RAC/OracleRealApplicationClusters/dockerfiles/19.3.0/Dockerfile
@@ -126,7 +126,7 @@ ARG SLIMMING
 
 COPY $SETUP_LINUX_FILE $GRID_SETUP_FILE $DB_SETUP_FILE $CHECK_SPACE_FILE $INSTALL_SCRIPTS/
 
-RUN chmod 755 "$INSTALL_SCRIPTS/*.sh"  && \
+RUN chmod 755 "$INSTALL_SCRIPTS"/*.sh  && \
     sync && \
     $INSTALL_DIR/install/$CHECK_SPACE_FILE && \
     $INSTALL_DIR/install/$SETUP_LINUX_FILE && \
