Latest container rac fixes (#2687)

--- a/OracleDatabase/RAC/OracleRealApplicationClusters/dockerfiles/21.3.0/Dockerfile
+++ b/OracleDatabase/RAC/OracleRealApplicationClusters/dockerfiles/21.3.0/Dockerfile
@@ -47,6 +47,7 @@ ARG WORKDIR="/rac-work-dir"
 # Environment variables required for this build (do NOT change)
 # -------------------------------------------------------------
 # Linux Env Variable
+# hadolint ignore=DL3044
 ENV SETUP_LINUX_FILE="setupLinuxEnv.sh" \
     INSTALL_DIR=/opt/scripts \
 # Grid Env variables
@@ -105,6 +106,7 @@ ENV SETUP_LINUX_FILE="setupLinuxEnv.sh" \
    BIN="/usr/sbin" \
    container="true"
 # Use second ENV so that variable get substituted
+# hadolint ignore=DL3044
 ENV  INSTALL_SCRIPTS=$INSTALL_DIR/install \
      PATH=/bin:/usr/bin:/sbin:/usr/sbin \
      SCRIPT_DIR=$INSTALL_DIR/startup \
@@ -160,7 +162,7 @@ RUN chmod 755 "$INSTALL_SCRIPTS"/*.sh  && \
 # -------------------------------------------
 #############################################
 # hadolint ignore=DL3006,DL3025
-FROM rac-image-slim-${SLIMMING} AS builder
+FROM rac-image-slim-false AS builder
 ARG SLIMMING
 
 COPY $FIXUP_PREQ_FILE $GRID_SW_INSTALL_RSP $INSTALL_GRID_PATCH $GRID_HOME_CLEANUP $ORACLE_HOME_CLEANUP $DB_INSTALL_RSP $INSTALL_DB_BINARIES_FILE $ENABLE_RAC_FILE $INSTALL_GRID_BINARIES_FILE $INSTALL_FILE_1* $INSTALL_FILE_2* $INSTALL_SCRIPTS/
@@ -186,14 +188,40 @@ RUN if [ "${SLIMMING}x" != 'truex' ]; then \
 
 RUN rm -f "$INSTALL_DIR"/install/* && \
     sync
-
+#############################################
+FROM rac-image-slim-true AS builder-slim
+ARG SLIMMING
+ 
+COPY $FIXUP_PREQ_FILE $GRID_SW_INSTALL_RSP $INSTALL_GRID_PATCH $GRID_HOME_CLEANUP $ORACLE_HOME_CLEANUP $DB_INSTALL_RSP $INSTALL_DB_BINARIES_FILE $ENABLE_RAC_FILE $INSTALL_GRID_BINARIES_FILE $INSTALL_FILE_1* $INSTALL_FILE_2* $INSTALL_SCRIPTS/
+ 
+RUN chmod 755 "${INSTALL_SCRIPTS}"/*.sh
+ 
+## Install software if SLIMMING is false
+# hadolint ignore=SC2086
+RUN if [ "${SLIMMING}x" != 'truex' ]; then \
+      sed -e '/hard *memlock/s/^/#/g' -i /etc/security/limits.d/oracle-database-preinstall-21c.conf && \
+      sed -e '/ *nofile /s/^/#/g' -i /etc/security/limits.d/oracle-database-preinstall-21c.conf && \
+      su  $GRID_USER -c "$INSTALL_DIR/install/$INSTALL_GRID_BINARIES_FILE EE $PATCH_NUMBER" && \
+      $INVENTORY/orainstRoot.sh && \
+      $GRID_HOME/root.sh && \
+      su  $DB_USER  -c  "$INSTALL_DIR/install/$INSTALL_DB_BINARIES_FILE EE" && \
+      su  $DB_USER  -c  "$INSTALL_DIR/install/$ENABLE_RAC_FILE" && \
+      $INVENTORY/orainstRoot.sh && \
+      $DB_HOME/root.sh && \
+      su  $GRID_USER -c "$INSTALL_SCRIPTS/$GRID_HOME_CLEANUP" && \
+      su  $DB_USER -c "$INSTALL_SCRIPTS/$ORACLE_HOME_CLEANUP" && \
+      :; \
+    fi
+ 
+RUN rm -f "$INSTALL_DIR"/install/* && \
+    sync
 #############################################
 # -------------------------------------------
 # Start new image for grid & database runtime
 # -------------------------------------------
 #############################################
 # hadolint ignore=DL3006,DL3025
-FROM rac-image-slim-${SLIMMING} AS final
+FROM rac-image-slim-false AS final
 
 # Setup Scripts
 COPY $FIXUP_PREQ_FILE $INSTALL_SCRIPTS/
@@ -228,6 +256,45 @@ USER ${USER}
 VOLUME ["/common_scripts"]
 WORKDIR $WORKDIR
 
+# Define default command to start Oracle Grid and RAC Database setup.
+# hadolint ignore=DL3025
+ENTRYPOINT /usr/bin/$INITSH
+#############################################
+FROM rac-image-slim-true AS final-slim
+ 
+# Setup Scripts
+COPY $FIXUP_PREQ_FILE $INSTALL_SCRIPTS/
+ 
+COPY $RUN_FILE $INITSH $ADDNODE $ADDNODE_RSP $SETUPSSH $FUNCTIONS $CONFIGGRID $GRID_INSTALL_RSP $DBCA_RSP $PWD_FILE $CHECK_DB_FILE $USER_SCRIPTS_FILE $STOP_FILE $CHECK_DB_FILE $REMOTE_LISTENER_FILE $SETUPGRIDENV $DELNODE $RESET_FAILED_UNITS $RESET_OS_PASSWORD $MULTI_NODE_INSTALL $SET_CRONTAB $SCRIPT_DIR/
+ 
+COPY --from=builder /u01 /u01
+ 
+# hadolint ignore=SC2086
+RUN if [ "${SLIMMING}x" != 'truex' ]; then \
+       $INVENTORY/orainstRoot.sh && \
+       $GRID_HOME/root.sh && \
+       $DB_HOME/root.sh && \
+       :; \
+    fi && \
+    chmod 755 $INSTALL_DIR/install/$FIXUP_PREQ_FILE && \
+    $INSTALL_DIR/install/$FIXUP_PREQ_FILE && \
+    sync && \
+    chmod 755 $SCRIPT_DIR/*.sh && \
+    chmod 666 $SCRIPT_DIR/*.rsp && \
+    echo "nohup $SCRIPT_DIR/runOracle.sh &" >> /etc/rc.local && \
+    rm -f /etc/rc.d/init.d/oracle-database-preinstall-21c-firstboot && \
+    chmod +x /etc/rc.d/rc.local  && \
+    cp $SCRIPT_DIR/$INITSH /usr/bin/$INITSH && \
+    chmod 755 /usr/bin/$INITSH && \
+    rm -f /etc/sysctl.d/99-oracle-database-preinstall-21c-sysctl.conf && \
+    rm -f /etc/sysctl.d/99-sysctl.conf && \
+    rm -f $INSTALL_DIR/install/* && \
+    sync
+ 
+USER ${USER}
+VOLUME ["/common_scripts"]
+WORKDIR $WORKDIR
+ 
 # Define default command to start Oracle Grid and RAC Database setup.
 # hadolint ignore=DL3025
 ENTRYPOINT /usr/bin/$INITSH
