Supporting custom setup scripts in prebuiltdb extensions (#2690)
* Added condition check to prevent creation of base stage for free db as it will fail due to dockerfile name

* Added condition check before tagging base stage to prevent error message on free db

* Added copy instruction to copy scripts in prebuiltdb extn

* Rename script folder to setup folder in prebuiltdb extn

* Updated extensions readme

* Updated extensions readme

* Added condition checks to prevent base stage image creation for prebuiltdb extn

* Fixed lint errors

* Fixed lint errors

---------

Co-authored-by: Gerald Venzl <gerald.venzl@oracle.com>

--- a/OracleDatabase/SingleInstance/extensions/prebuiltdb/Dockerfile
+++ b/OracleDatabase/SingleInstance/extensions/prebuiltdb/Dockerfile
@@ -18,6 +18,7 @@
 #
 
 ARG BASE_IMAGE=oracle/database:21.3.0-ee
+# hadolint ignore=DL3006
 FROM ${BASE_IMAGE}
 
 ARG ORACLE_SID
@@ -33,5 +34,7 @@ ENV ORACLE_PDB=${ORACLE_PDB}
 ENV ORACLE_PWD=${ORACLE_PWD}
 ENV AUTO_MEM_CALCULATION=${AUTO_MEM_CALCULATION:-false}
 
+COPY --chown=oracle:dba setup/* "$ORACLE_BASE"/scripts/extensions/setup
+
 # Creating the database
-RUN $ORACLE_BASE/$RUN_FILE --nowait
+RUN "$ORACLE_BASE/$RUN_FILE" --nowait
