Changed from JDK 20 to JDK 21 for both, Oracle JDK and OpenJDK
Signed-off-by: Aurelio Garcia-Ribeyro <aurelio.garciaribeyro@oracle.com>

--- a/OracleOpenJDK/21/Dockerfile
+++ b/OracleOpenJDK/21/Dockerfile
@@ -4,18 +4,18 @@
 #
 # ORACLE DOCKERFILES PROJECT
 # --------------------------
-# This is the Dockerfile for Oracle OpenJDK 20 on Oracle Linux 8
+# This is the Dockerfile for Oracle OpenJDK 21 on Oracle Linux 8
 #
 # REQUIRED FILES TO BUILD THIS IMAGE
 # ----------------------------------
 #
-# (1) openjdk-20.xx_linux-x64_bin.tar.gz
-#     Downloaded from https://jdk.java.net/20/
+# (1) openjdk-21.xx_linux-x64_bin.tar.gz
+#     Downloaded from https://jdk.java.net/21/
 #
 # HOW TO BUILD THIS IMAGE
 # -----------------------
 # Run:
-#      $ docker build -t oracle/openjdk:20 .
+#      $ docker build -t oracle/openjdk:21 .
 #
 # This command is already scripted in build.sh so you can alternatively run
 #		$ bash build.sh
@@ -25,8 +25,8 @@ FROM oraclelinux:8
 
 LABEL maintainer="Aurelio Garcia-Ribeyro <aurelio.garciaribeyro@oracle.com>"
 
-ENV JAVA_URL=https://download.java.net/java/GA/jdk20.0.2/6e380f22cbe7469fa75fb448bd903d8e/9/GPL \
-	JAVA_HOME=/usr/java/jdk-20 \
+ENV JAVA_URL=https://download.java.net/java/GA/jdk21/fd2272bbf8e04c3dbaee13770090416c/35/GPL \
+	JAVA_HOME=/usr/java/jdk-21 \
 	LANG=en_US.UTF-8
 	
 
@@ -50,7 +50,7 @@ RUN set -eux; \
     if [ "$ARCH" = "x86_64" ]; \
         then ARCH="x64"; \
     fi && \
-    JAVA_PKG="$JAVA_URL"/openjdk-20.0.2_linux-"${ARCH}"_bin.tar.gz ; \
+    JAVA_PKG="$JAVA_URL"/openjdk-21_linux-"${ARCH}"_bin.tar.gz ; \
 	JAVA_SHA256="$(curl "$JAVA_PKG".sha256)" ; \ 
 	curl --output /tmp/jdk.tgz "$JAVA_PKG" && \
 	echo "$JAVA_SHA256" */tmp/jdk.tgz | sha256sum -c -; \
