--- a/OracleDatabase/RAC/OracleRealApplicationClusters/samples/racpodmancompose/compose-files/nfsdevices/podman-compose.yml
+++ b/OracleDatabase/RAC/OracleRealApplicationClusters/samples/racpodmancompose/compose-files/nfsdevices/podman-compose.yml
@@ -1,5 +1,5 @@
 ---
-version: "3"
+version: '3'
 services:
   racdns:
     container_name: ${DNS_CONTAINER_NAME}
@@ -22,10 +22,29 @@ services:
     networks:
       rac_pub1_nw:
         ipv4_address: ${DNS_PUBLIC_IP}
+  racnode-storage:
+    container_name: ${STORAGE_CONTAINER_NAME}
+    hostname: ${STORAGE_HOST_NAME}
+    image: ${STORAGE_IMAGE_NAME}
+    dns_search: ${DNS_DOMAIN}
+    volumes:
+      - ${NFS_STORAGE_VOLUME}:/oradata
+    cap_add:
+      - SYS_ADMIN
+      - AUDIT_WRITE
+      - NET_ADMIN
+    restart: always
+    healthcheck:
+      test:
+        - CMD-SHELL
+        - /bin/bash -c "ls -lrt /oradata/ && showmount -e | grep '/oradata'"
+      interval: ${HEALTHCHECK_INTERVAL}
+      timeout: ${HEALTHCHECK_TIMEOUT}
+      retries: ${HEALTHCHECK_RETRIES}
+    networks:
+      rac_priv1_nw:
+        ipv4_address: ${STORAGE_PRIVATE_IP}
   racnode1:
-    depends_on:
-      racdns:
-        condition: service_healthy
     container_name: ${RACNODE1_CONTAINER_NAME}
     hostname: ${RACNODE1_HOST_NAME}
     image: ${RACNODE_IMAGE_NAME}
@@ -35,12 +54,10 @@ services:
     volumes:
       - /boot:/boot:ro
       - /opt/.secrets:/run/secrets:ro
-      - /dev/shm
       - /opt/containers/rac_host_file:/etc/hosts
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+      - racstorage:/oradata
     tmpfs:
       - /dev/shm:rw,exec,size=4G
-      - /run
     privileged: false
     environment:
       DNS_SERVERS: ${DNS_PUBLIC_IP}
@@ -56,20 +73,26 @@ services:
       ASM_DEVICE_LIST: ${ASM_DEVICE_LIST}
       ASM_DISCOVERY_DIR: ${ASM_DISCOVERY_DIR}
       CMAN_HOSTNAME: ${CMAN_HOSTNAME}
-      CMAN_IP: ${CMAN_IP}
+      CMAN_PUBLIC_IP: ${CMAN_PUBLIC_IP}
       COMMON_OS_PWD_FILE: ${COMMON_OS_PWD_FILE}
       PWD_KEY: ${PWD_KEY}
+      ORACLE_SID: ${ORACLE_SID}
       RESET_FAILED_SYSTEMD: "true"
+      DEFAULT_GATEWAY: ${DEFAULT_GATEWAY}
+      TMPDIR: /var/tmp
     ulimits:
       rtprio: 99
     cap_add:
       - SYS_RESOURCE
       - NET_ADMIN
       - SYS_NICE
-    devices:
-      - "${ASM_DISK1}:${ASM_DEVICE1}"
-      - "${ASM_DISK2}:${ASM_DEVICE2}"
-    cpu_rt_runtime: 95000
+      - AUDIT_WRITE
+      - AUDIT_CONTROL
+    sysctls:
+        - kernel.shmall=2097152
+        - kernel.shmmax=8589934592
+        - kernel.shmmni=4096
+        - 'kernel.sem=250 32000 100 128'
     networks:
       - rac_pub1_nw
       - rac_priv1_nw
@@ -79,11 +102,6 @@ services:
       timeout: ${HEALTHCHECK_TIMEOUT}
       retries: ${HEALTHCHECK_RETRIES}
   racnode-cman:
-    depends_on:
-      racdns:
-        condition: service_healthy
-      racnode1:
-        condition: service_healthy
     container_name: ${CMAN_CONTAINER_NAME}
     hostname: ${CMAN_HOST_NAME}
     image: ${CMAN_IMAGE_NAME}
@@ -103,7 +121,7 @@ services:
     healthcheck:
       test:
         - CMD-SHELL
-        - /bin/bash -c "export ORACLE_HOME=/u01/app/oracle/product/${CMAN_VERSION}/client_1 && export LD_LIBRARY_PATH=${ORACLE_HOME}/lib && /u01/app/oracle/product/${CMAN_VERSION}/client_1/bin/cmctl show service -c ${CMAN_HOST_NAME}.${DNS_DOMAIN} | grep -q 'Instance \"cman\", status READY'"
+        - /bin/bash -c "export ORACLE_HOME=/u01/app/oracle/product/cman && export LD_LIBRARY_PATH=${ORACLE_HOME}/lib && /u01/app/oracle/product/cman/bin/cmctl show service -c ${CMAN_HOST_NAME}.${DNS_DOMAIN} | grep -q 'Instance \"cman\", status READY'"
       interval: ${HEALTHCHECK_INTERVAL}
       timeout: ${HEALTHCHECK_TIMEOUT}
       retries: ${HEALTHCHECK_RETRIES}
@@ -122,3 +140,6 @@ networks:
       driver: default
       config:
         - subnet: "${PRIVATE_NETWORK_SUBNET}"
+volumes:
+  racstorage:
+    external: true
